--- a/package.json
+++ b/package.json
@@ -20,5 +20,15 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@tanstack/react-query": "^5.79.0",
+    "@trpc/client": "^11.2.0",
+    "@trpc/next": "^11.2.0",
+    "@trpc/react-query": "^11.2.0",
+    "@trpc/server": "^11.2.0",
+    "next": "15.3.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
+  }
 }
