chore: update project name and readme instructions
- Change project name in package.json to reflect new boilerplate purpose
- Update readme clone instructions with correct repository URL and name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "image-generator-v2",
+  "name": "boilerplate-trpc-expo-trpc",
   "private": true,
   "scripts": {
     "build": "turbo run build",
