refactor(trpc): migrate trpc logic to api package and update web app
- Move trpc related files from trpc package to api package
- Update web app to use new api package
- Add server component example
- Update client component to use renamed clientApi

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@repo/trpc": "*",
+    "@repo/api": "*",
     "zod": "^3.22.4"
   },
   "devDependencies": {
