--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,8 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@repo/api": "*",
-    "zod": "^3.22.4"
+    "@repo/api": "*"
   },
   "devDependencies": {
     "typescript": "^5",
