--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@trpc/server": "^11.2.0",
     "next": "15.3.3",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "zod": "^3.22.4"
   }
 }
