--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@trpc/next": "^11.2.0",
     "@trpc/react-query": "^11.2.0",
     "@trpc/server": "^11.2.0",
+    "@types/react": "^19",
     "next": "15.3.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
